style.css
/* Madhukar Stylesheet */

/* Variables */
:root{
  /* alternative Color Scheme - Uncomment and Comment other to see */
  /* --bg:  rgba(27, 58, 58, 0.98);
  --bg-2:darkslategray; */
  
  --bg:  rgba(31, 101, 103, 0.874);
  --bg-2: cadetblue;
  /* text */
  /* rgb(220, 0, 220); */
  --text:   darkslategray;
  --text-1: white;
  --text-2: rgb(108, 2, 108);
  
  --radious: 10px;

  --font-emphasis: 'Corinthia', sans-serif;
  --font-body: ariel;
}
*, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
html { 
  scroll-behavior: smooth; font-size: 16px; 
}

nav{
  top: 0; left: 0; right: 0;
  z-index: 200;
  background-color: var(--bg);
  position: fixed;
  padding: 10px;
}

.nav__inner{
  display: grid;
  grid-template-columns: 9fr 1fr 1fr;
  font-size: 0.8rem;
}
.nav__title{
  color: var(--text-1);
  display: flex;
  justify-content:start;
  align-items:center;
}
.nav__brand{
  font-family: corinthia;
  font-size: 1rem;
  color: white;
  width: 100%;
}
/* .nav__profile-pic{
  height: 50px;
  width: 50px;
  
} */
/* Animated Rotating Logo/Brand */
.nav__brand{
  display: inline-block;
  animation: spin 5s linear infinite;
}
@keyframes spin{
  from{
    transform: rotate(0deg)
  }
  to {
    transform: rotate(360deg)
  }
}
body{
  background-color: var(--bg-2);
}
.paragraph{
  padding-top: 10vh;
  font-weight: bold;
  margin: 5vw;
  color: white;
}
.paragraph__text{
  padding-bottom: 5vw;
  font-family:Helvetica;
}
.formFeatures{
  width: 90vw;
  margin: auto;
  border-style: dashed;
  border-width: 1px;
  border-radius: 5px;
  color: var(--text-1);
  font-family: arial;
}
.formFeatures__list{
  padding: 1.5rem;
}
.formFeatures__heading{
  padding-left: 0.5rem;
  padding-top: 0.5rem;
  font-size: 1rem;
}
.formFeatures__list-item{
  margin-bottom: 1vh;
}
.form{
  border-style:dashed;
  border-radius: 5px;
  border-width: 1px;
  width: 90vw;
  margin: auto;
  text-align: center;
  padding-bottom: 1rem;
  color: var(--text-1);
  font-family: arial;
}
.form__heading{
  color: var(--text-1);
  text-align: center;
  padding-top: 0.5rem;
  font-weight: bold;
}
.form__group{
  padding-top: 1rem;
  text-align: center;
}
.form button{
  cursor: pointer;
  width: 50vw;
  margin-top: 1rem;
  border-style: none;
  padding: 0.2rem;
  background-color: var(--bg);
  color: white;
  font-weight: bold;
  border-radius: 5px;
  box-shadow: 1px 1px black;
}
.form button:hover{
  background-color: white;
  color:var(--bg);
}
.form button:active{
  background-color: grey;
  box-shadow: none;
}
.form__label{
  color: var(--text-1);
  font-size: 1rem;
}
.form input{
  height: 1.5rem;
  width: 90%;
  margin-bottom: 1rem;
}
footer{
  color: white;
  margin-top: 2rem;
}
.footer__inner{
  text-align: center;
  font-size: 0.5rem;
}
.footer__brand{
  padding-top: 0.5rem;
  font-family: arial;
}
.footer__leads{
  padding-top: 0.5rem;
  font-family: helvetica;
  margin-bottom: 0.5rem;
}
@media (min-width:400px){
  :root{
    font-size: 2rem;
  }
  .nav__brand{
    width: 1rem;
  }
  .paragraph__text{
    padding-bottom: 1rem;
  }
  .form__group{
    width: 60vw;
    margin: auto;
  }
  input{
    font-size: 1rem;
    padding-left: 1rem;
    height: 1.2rem;
    margin-top: 0.3rem;
  }
  button{
    font-size: 1rem;
  }
}

